# my-auto-quant

./: .gitignore  AGENTS.md  系统架构.md
qmt_proxy/: README.md  pyproject.toml  requirements.txt  setup.py  系统描述.md
qmt_proxy/config/: users.json
qmt_proxy/src/qmt_proxy/: __init__.py  __main__.py  auth.py  connection_manager.py  exceptions.py  main.py  models.py
qmt_proxy/tests/: conftest.py  test_auth.py  test_connection_manager.py  test_models.py  test_websocket.py
trader_executor/: AGENTS.md  README.md  pyproject.toml  requirements.txt  系统描述.md
trader_executor/config/: config.json
trader_executor/src/trader_executor/: __init__.py  __main__.py  callback.py  client.py.bak  config.py  exceptions.py  idempotency.py  main.py  models.py  order_channel.py  qmt_client.py  qmt_client_example.py  risk_checker.py  trade_callback.py
trader_executor/src/trader_executor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trader_executor/tests/: __init__.py  conftest.py  test_callback.py  test_client.py  test_exceptions.py  test_https.py  test_idempotency.py  test_models.py  test_qmt_client.py  test_risk_checker.py
trader_initiator/: README.md  pyproject.toml  系统描述.md
trader_initiator/config/: config.json
trader_initiator/src/trader_initiator/: __init__.py  __main__.py  client.py  config.py  exceptions.py
trader_initiator/src/trader_initiator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
trader_initiator/tests/: __init__.py  test_client.py  test_exceptions.py
